Some improvements to formatting

--- a/app/views/docs/index.phtml
+++ b/app/views/docs/index.phtml
@@ -93,12 +93,13 @@ $cols = [
                         <a href="/docs/databases"><i class="icon-right-dir"></i> Databases</a>
                         <ul class="margin-top-small margin-bottom-small">
                             <li>&nbsp;&nbsp;<a href="/docs/databases-relationships" data-selected="/docs/databases"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i>Relationships (Beta)</a></li>
+                            <li>&nbsp;&nbsp;<a href="/docs/queries" data-selected="/docs/databases"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i>Queries</a></li>
+                            <li>&nbsp;&nbsp;<a href="/docs/pagination" data-selected="/docs/databases"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i>Pagination</a></li>
                         </ul>
                     </li>                    
                     <li><a href="/docs/storage">Storage</a></li>
                     <li><a href="/docs/authentication">Authentication</a></li>
                     <li><a href="/docs/functions">Functions</a></li>
-                    <li><a href="/docs/queries">Queries</a></li>
                 </ul>
 
                 <div class="margin-bottom-small">
@@ -109,6 +110,7 @@ $cols = [
                     <li><a href="/docs/keys">API Keys</a></li>
                     <li><a href="/docs/permissions">Permissions</a></li>
                     <li><a href="/docs/events">Events</a></li>
+                    <li><a href="/docs/queries">Queries</a></li>
                     <li><a href="/docs/pagination">Pagination</a></li>
                     <li><a href="/docs/webhooks">Webhooks</a></li>
                     <li><a href="/docs/custom-domains">Custom Domains</a></li>
