--- a/app/views/docs/databases-relationships.phtml
+++ b/app/views/docs/databases-relationships.phtml
@@ -308,7 +308,7 @@ databases.createRelationshipAttribute(
 <h2><a href="#create-documents" id="create-documents">Creating Documents</a></h2>
 <p>If a collection has relationship attributes, you can create documents in two ways.</p>
 
-<h3><a href="#create-nested" id="create-nested">Created Child Documents</a></h3>
+<h3><a href="#create-nested" id="create-nested">Creating Child Documents</a></h3>
 <p>You can create both the <b>parent</b> and <b>child</b> at once in a relationship by nesting data.</p>
 <ul class="phases clear" data-ui-phases>
     <li>
