--- a/app/views/docs/databases-relationships.phtml
+++ b/app/views/docs/databases-relationships.phtml
@@ -424,7 +424,7 @@ databases.createDocument(
 
 <h3><a href="#create-reference" id="create-reference">Reference Child Documents</a></h3>
 
-<p>You can create the parent and <b>reference the child documents</b> using their IDs.</p>
+<p>If the child documents are already present in the related collection, you can create the parent and <b>reference the child documents</b> using their IDs.</p>
 <ul class="phases clear" data-ui-phases>
     <li>
         <h3>Web</h3>
