--- a/app/views/docs/queries.phtml
+++ b/app/views/docs/queries.phtml
@@ -71,7 +71,7 @@
         </tr>
         <tr>
             <td>Ends With</td>
-            <td><code>Query.endsWith("name", ["happily ever after."])</code></td>
+            <td><code>Query.endsWith("name", "happily ever after.")</code></td>
             <td>Returns documents if a string attributes ends with a substring.</td>
         </tr>
         <tr>
