--- a/app/views/docs/queries.phtml
+++ b/app/views/docs/queries.phtml
@@ -52,7 +52,7 @@
         <tr>
             <td>Between</td>
             <td><code>Query.between("price", 5, 10)</code></td>
-            <td>Returns document if attribute value falls between the two values. The boundary values are inclusive.</td>
+            <td>Returns document if attribute value falls between the two values. The boundary values are inclusive and can be strings or numbers.</td>
         </tr>
         <tr>
             <td>Is Null</td>
