--- a/app/views/docs/authentication-server.phtml
+++ b/app/views/docs/authentication-server.phtml
@@ -207,7 +207,7 @@ client
 </ul>
 
 <h2><a href="/docs/authentication-server#when-to-use" id="when-to-use">When Should I Use JWT Auth?</a></h2>
-<p>JWT auth is useful when you need your backend app's Server SDK be restricted by the same set of permissions.</p>
+<p>JWT auth is useful when you need your backend app's Server SDK to be restricted by the same set of permissions.</p>
 
 <p>If your backend app's Server SDK is using an <a href="/docs/keys">API key</a>, it will fetch <b>all resources</b> reguardless of permissions. This means the Server SDK might fetch files and documents your user should not be able to see, which is not helpful when you need to act on behalf of a user.</p>
 
