--- a/app/views/docs/authentication-security.phtml
+++ b/app/views/docs/authentication-security.phtml
@@ -31,7 +31,7 @@
                 Web
             </td>
             <td>
-                Uses a session secure cookie and falls back to local storage when a session cookie is not available.
+                Uses a secure session cookie and falls back to local storage when a session cookie is not available.
             </td>
         </tr>        
         <tr>
