Fix Christy's comments

--- a/app/views/docs/authentication-security.phtml
+++ b/app/views/docs/authentication-security.phtml
@@ -81,7 +81,7 @@
 <h2><a href="/docs/authentication-security#security" id="security">Security</a></h2>
 
 <p>
-    Security is very important to protect users' data and privacy. Appwrite uses a <a href="/docs/permissions">permissions model</a> coupled with user sessions to ensure users only have access to certain information based on the permissions. With Appwrite services, including databases and storage, access is granted at the collection, bucket, document, or file level. This access is consistent across access to these items in relation to document access, file access, and real-time events.
+    Security is very important to protect users' data and privacy. Appwrite uses a <a href="/docs/permissions">permissions model</a> coupled with user sessions to ensure users need correct permissions to access resources.With all Appwrite services, including databases and storage, access is granted at the collection, bucket, document, or file level. These permissions are consistently enforced regardless of which SDK or API is used to access a resource.
 </p>
 
 <h2><a href="/docs/authentication-security#password-history" id="password-history">Password History</a></h2>
