--- a/app/views/docs/index.phtml
+++ b/app/views/docs/index.phtml
@@ -95,7 +95,7 @@ $cols = [
                         <a href="/docs/authentication"><i class="icon-right-dir"></i> Authentication</a>
                         <ul class="margin-top-small margin-bottom-small">
                             <li>&nbsp;&nbsp;<a href="/docs/authentication-server" data-selected="/docs/authentication"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i>Server Authentication</a></li>
-                            <li>&nbsp;&nbsp;<a href="/docs/authentication-security" data-selected="/docs/authentication"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i>Server Security</a></li>                                                
+                            <li>&nbsp;&nbsp;<a href="/docs/authentication-security" data-selected="/docs/authentication"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i>Security</a></li>                                                
                         </ul>
                     </li>
                     <li><a href="/docs/functions">Functions</a></li>
