--- a/app/views/docs/functions.phtml
+++ b/app/views/docs/functions.phtml
@@ -684,7 +684,7 @@ func main() async throws {
 </ul>
 
 <h2><a href="/docs/functions#scheduled-execution" id="scheduled-execution">Scheduled Execution</a></h2>
-<p>Appwrite supports scheduled function executions. You can schedule execution using <a href="https://en.wikipedia.org/wiki/Cron" target="_blank" rel="noopener">cron expressions</a> in the settings of your function. Cron supports recurring executions as frequently as <b>every minute</b>.</p>
+<p>Appwrite supports scheduled function executions. You can schedule executions using <a href="https://en.wikipedia.org/wiki/Cron" target="_blank" rel="noopener">cron expressions</a> in the settings of your function. Cron supports recurring executions as frequently as <b>every minute</b>.</p>
 
 <p>Here are some cron expressions for common intervals.</p>
 
