--- a/app/views/docs/authentication.phtml
+++ b/app/views/docs/authentication.phtml
@@ -503,7 +503,7 @@ mutation {
 
 <h3><a href="/docs/authentication#magic-url" id="magic-url">Magic URL</a></h3>
 <p>
-    Magic URL authentication allows a user to sign in without a password. Magic URL authentication sends the user an email with a secret key for creating a new session. If the provided email does not belong to an existing user, the provided user ID is used to create a new user. If the account already exists, user ID parameter is ignored 
+    Magic URL authentication allows a user to sign in without a password. Magic URL authentication sends the user an email with a secret key for creating a new session. If the provided email does not belong to an existing user, the provided user ID is used to create a new user. If the account already exists, the provided user ID is ignored 
 </p>
 
 <p>
