--- a/app/views/docs/rest.phtml
+++ b/app/views/docs/rest.phtml
@@ -321,7 +321,7 @@ Appwrite's SDKs provide a <code>Query</code> class to generate query strings. Wh
     </thead>
     <tbody>
         <tr>
-            <td>Select</td>
+            <td>select</td>
             <td><code>select([attribute])</code></td>
         </tr>
         <tr>
