--- a/app/views/docs/rest.phtml
+++ b/app/views/docs/rest.phtml
@@ -350,7 +350,7 @@ Appwrite's SDKs provide a <code>Query</code> class to generate query strings. Wh
         </tr>
         <tr>
             <td>between</td>
-            <td><code>Query.between("attribute", lowerBound, upperBound)</code></td>
+            <td><code>between("attribute", lowerBound, upperBound)</code></td>
         </tr>
         <tr>
             <td>isNull</td>
