--- a/app/views/docs/databases-relationships.phtml
+++ b/app/views/docs/databases-relationships.phtml
@@ -116,7 +116,7 @@
 
 const client = new Client()
     .setEndpoint('https://[HOSTNAME_OR_IP]/v1') // Your API Endpoint
-    .setProject('5df5acd0d48c2');               // Your project ID
+    .setProject('[PROJECT_ID]');               // Your project ID
 
 const databases = new Databases(client);
 
@@ -141,7 +141,7 @@ use \Appwrite\Services\Databases;
 
 $client = (new Client())
     ->setEndpoint('https://[HOSTNAME_OR_IP]/v1') // Your API Endpoint
-    ->setProject('5df5acd0d48c2');               // Your project ID
+    ->setProject('[PROJECT_ID]');               // Your project ID
 
 $databases = new Databases($client);
 
@@ -165,7 +165,7 @@ from appwrite.services.databases import Databases
 
 client = (Client()
     .set_endpoint('https://[HOSTNAME_OR_IP]/v1')     # Your API Endpoint
-    .set_project('5df5acd0d48c2'))                   # Your project ID
+    .set_project('[PROJECT_ID]'))                   # Your project ID
 
 databases = Databases(client)
 
@@ -190,7 +190,7 @@ include Appwrite
 
 client = Client.new
     .set_endpoint('https://[HOSTNAME_OR_IP]/v1')# Your API Endpoint
-    .set_project('5df5acd0d48c2')               # Your project ID
+    .set_project('[PROJECT_ID]')               # Your project ID
 
 databases = Databases.new(client)
 
@@ -213,7 +213,7 @@ databases.create_relationship_attribute(
 
 const client = new Client()
     .setEndpoint("https://[HOSTNAME_OR_IP]/v1") // Your API Endpoint
-    .setProject("5df5acd0d48c2");               // Your project ID
+    .setProject("[PROJECT_ID]");               // Your project ID
 
 const databases = new Databases(client);
 
@@ -236,7 +236,7 @@ databases.createRelationshipAttribute(
 
 final client = Client()
     .setEndpoint('https://[HOSTNAME_OR_IP]/v1') // Your API Endpoint
-    .setProject('5df5acd0d48c2');               // Your project ID
+    .setProject('[PROJECT_ID]');               // Your project ID
 
 final databases = Databases(client);
 
@@ -260,7 +260,7 @@ import io.appwrite.services.Databases
 
 val client = Client()
     .setEndpoint("https://[HOSTNAME_OR_IP]/v1") // Your API Endpoint
-    .setProject("5df5acd0d48c2")                // Your project ID
+    .setProject("[PROJECT_ID]")                // Your project ID
 
 val databases = Databases(client)
 
@@ -283,7 +283,7 @@ databases.createRelationshipAttribute(
 
 let client = Client()
     .setEndpoint("https://[HOSTNAME_OR_IP]/v1") // Your API Endpoint
-    .setProject("5df5acd0d48c2")                // Your project ID
+    .setProject("[PROJECT_ID]")                // Your project ID
 
 let databases = Databases(client)
 
@@ -316,7 +316,7 @@ databases.createRelationshipAttribute(
 
 const client = new Client()
     .setEndpoint('https://[HOSTNAME_OR_IP]/v1') // Your API Endpoint
-    .setProject('5df5acd0d48c2');c              // Your project ID
+    .setProject('[PROJECT_ID]');               // Your project ID
 
 const databases = new Databases(client);
 
@@ -342,7 +342,7 @@ await databases.createDocument(
 
 final client = Client()
     .setEndpoint('https://[HOSTNAME_OR_IP]/v1')  // Your API Endpoint
-    .setProject('5df5acd0d48c2');                // Your project ID
+    .setProject('[PROJECT_ID]');                // Your project ID
 
 final databases = Databases(client);
 
@@ -368,7 +368,7 @@ await databases.createDocument(
 
 let client = Client()
     .setEndpoint("https://[HOSTNAME_OR_IP]/v1") // Your API Endpoint
-    .setProject("5df5acd0d48c2")                // Your project ID
+    .setProject("[PROJECT_ID]")                // Your project ID
 
 let databases = Database(client: client)
 
@@ -396,7 +396,7 @@ import io.appwrite.ID
 
 val client = Client()
     .setEndpoint("https://[HOSTNAME_OR_IP]/v1") // Your API Endpoint
-    .setProject("5df5acd0d48c2")                // Your project ID
+    .setProject("[PROJECT_ID]")                // Your project ID
 
 val databases = Database(client)
 
@@ -432,7 +432,7 @@ databases.createDocument(
 
 const client = new Client()
     .setEndpoint('https://[HOSTNAME_OR_IP]/v1') // Your API Endpoint
-    .setProject('5df5acd0d48c2');c              // Your project ID
+    .setProject('[PROJECT_ID]');               // Your project ID
 
 const databases = new Databases(client);
 
@@ -458,7 +458,7 @@ await databases.createDocument(
 
 final client = Client()
     .setEndpoint('https://[HOSTNAME_OR_IP]/v1') // Your API Endpoint    
-    .setProject('5df5acd0d48c2');               // Your project ID  
+    .setProject('[PROJECT_ID]');               // Your project ID  
 
 final databases = Databases(client);
 
@@ -484,7 +484,7 @@ await databases.createDocument(
 
 let client = Client()
     .setEndpoint("https://[HOSTNAME_OR_IP]/v1") // Your API Endpoint        
-    .setProject("5df5acd0d48c2")                // Your project ID      
+    .setProject("[PROJECT_ID]")                // Your project ID      
 
 let databases = Database(client: client)
 
@@ -512,7 +512,7 @@ import io.appwrite.ID
 
 val client = Client()
     .setEndpoint("https://[HOSTNAME_OR_IP]/v1") // Your API Endpoint    
-    .setProject("5df5acd0d48c2")                // Your project ID  
+    .setProject("[PROJECT_ID]")                // Your project ID  
 
 val databases = Database(client)
 
@@ -548,7 +548,7 @@ databases.createDocument(
 
 const client = new Client()
     .setEndpoint('https://[HOSTNAME_OR_IP]/v1') // Your API Endpoint
-    .setProject('5df5acd0d48c2');c              // Your project ID
+    .setProject('[PROJECT_ID]');               // Your project ID
 
 const databases = new Databases(client);
 
@@ -574,7 +574,7 @@ await databases.updateDocument(
 
 final client = Client()
     .setEndpoint('https://[HOSTNAME_OR_IP]/v1')
-    .setProject('5df5acd0d48c2');
+    .setProject('[PROJECT_ID]');
 
 final databases = Databases(client);
 
@@ -600,7 +600,7 @@ await databases.updateDocument(
 
 let client = Client()
     .setEndpoint("https://[HOSTNAME_OR_IP]/v1")
-    .setProject("5df5acd0d48c2")
+    .setProject("[PROJECT_ID]")
 
 let databases = Database(client: client)
 
@@ -627,7 +627,7 @@ import io.appwrite.services.Database
 
 val client = Client()
     .setEndpoint("https://[HOSTNAME_OR_IP]/v1")
-    .setProject("5df5acd0d48c2")
+    .setProject("[PROJECT_ID]")
 
 val databases = Database(client)
 
@@ -670,7 +670,7 @@ databases.updateDocument(
 
 const client = new Client()
     .setEndpoint('https://[HOSTNAME_OR_IP]/v1') // Your API Endpoint
-    .setProject('5df5acd0d48c2');c              // Your project ID
+    .setProject('[PROJECT_ID]');               // Your project ID
 
 const databases = new Databases(client);
 
@@ -688,7 +688,7 @@ await databases.deleteDocument(
 
 final client = Client()
     .setEndpoint('https://[HOSTNAME_OR_IP]/v1')
-    .setProject('5df5acd0d48c2');
+    .setProject('[PROJECT_ID]');
 
 final databases = Databases(client);
 
@@ -706,7 +706,7 @@ await databases.deleteDocument(
 
 let client = Client()
     .setEndpoint("https://[HOSTNAME_OR_IP]/v1")
-    .setProject("5df5acd0d48c2")
+    .setProject("[PROJECT_ID]")
 
 let databases = Database(client: client)
 
@@ -725,7 +725,7 @@ import io.appwrite.services.Database
 
 val client = Client()
     .setEndpoint("https://[HOSTNAME_OR_IP]/v1")
-    .setProject("5df5acd0d48c2")
+    .setProject("[PROJECT_ID]")
 
 val databases = Database(client)
 
@@ -752,7 +752,7 @@ databases.deleteDocument(
 
 const client = new Client()
     .setEndpoint('https://[HOSTNAME_OR_IP]/v1') // Your API Endpoint
-    .setProject('5df5acd0d48c2');c              // Your project ID
+    .setProject('[PROJECT_ID]');               // Your project ID
 
 const databases = new Databases(client);
 
@@ -783,7 +783,7 @@ await databases.createDocument(
 
 final client = Client()
     .setEndpoint('https://[HOSTNAME_OR_IP]/v1')
-    .setProject('5df5acd0d48c2');
+    .setProject('[PROJECT_ID]');
 
 final databases = Databases(client);
 
@@ -814,7 +814,7 @@ await databases.createDocument(
 
 let client = Client()
     .setEndpoint("https://[HOSTNAME_OR_IP]/v1")
-    .setProject("5df5acd0d48c2")
+    .setProject("[PROJECT_ID]")
 
 let databases = Database(client: client)
 
@@ -845,7 +845,7 @@ databases.createDocument(
 
 let client = Client()
     .setEndpoint("https://[HOSTNAME_OR_IP]/v1")
-    .setProject("5df5acd0d48c2")
+    .setProject("[PROJECT_ID]")
 
 let databases = Database(client: client)
 
