--- a/app/views/docs/databases.phtml
+++ b/app/views/docs/databases.phtml
@@ -194,7 +194,7 @@ import AppwriteModels
 func main() async throws {
     let client = Client()
         .setEndpoint("https://[HOSTNAME_OR_IP]/v1")
-        .setProject("[PROJECT_ID]")")
+        .setProject("[PROJECT_ID]")
 
     let databases = Databases(client)
 
@@ -278,7 +278,7 @@ func main() async throws {
 
 const client = new Client()
     .setEndpoint("https://[HOSTNAME_OR_IP]/v1")
-    .setProject("[PROJECT_ID]")")
+    .setProject("[PROJECT_ID]")
 
 const databases = new Databases(client);
 
@@ -306,7 +306,7 @@ promise.then(function (response) {
 void main() async {
     final client = Client()
         .setEndpoint("https://[HOSTNAME_OR_IP]/v1")
-        .setProject("[PROJECT_ID]")")
+        .setProject("[PROJECT_ID]")
 
     final databases = Databases(client);
 
