--- a/app/views/docs/index.phtml
+++ b/app/views/docs/index.phtml
@@ -93,8 +93,8 @@ $cols = [
                         <a href="/docs/databases"><i class="icon-right-dir"></i> Databases</a>
                         <ul class="margin-top-small margin-bottom-small">
                             <li>&nbsp;&nbsp;<a href="/docs/databases-relationships" data-selected="/docs/databases"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i>Relationships (Beta)</a></li>
-                            <li>&nbsp;&nbsp;<a href="/docs/queries#" data-selected="/docs/databases"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i>Queries</a></li>
-                            <li>&nbsp;&nbsp;<a href="/docs/pagination#" data-selected="/docs/databases"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i>Pagination</a></li>
+                            <li>&nbsp;&nbsp;<a href="/docs/databases-queries" data-selected="/docs/databases"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i>Queries</a></li>
+                            <li>&nbsp;&nbsp;<a href="/docs/databases-pagination" data-selected="/docs/databases"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i>Pagination</a></li>
                         </ul>
                     </li>                    
                     <li><a href="/docs/storage">Storage</a></li>
