--- a/app/views/docs/storage.phtml
+++ b/app/views/docs/storage.phtml
@@ -53,7 +53,7 @@
     </tbody>
 </table>
 
-<p>You can learn more about storage buckets and APIs you can use to manage storage buckets from our <a href="docs/server/storage">Storage documentation</a>. Now that we know how to create and configure buckets for our applications, let's look at how to manage files using the storage service.</p>
+<p>You can learn more about storage buckets and APIs you can use to manage storage buckets from our <a href="/docs/server/storage">Storage documentation</a>. Now that we know how to create and configure buckets for our applications, let's look at how to manage files using the storage service.</p>
 
 <h2><a href="/docs/storage#createFile" id="createFile">Create File</a></h2>
 
