--- a/app/views/docs/rest.phtml
+++ b/app/views/docs/rest.phtml
@@ -32,7 +32,7 @@
     <tr>
         <td><code>X-Appwrite-JWT: [TOKEN]</code></td>
         <td><span class="tag">optional</span></td>
-        <td>Token used for JWT authentication, tokens can be generated using the <a href="docs/client/account#accountCreateJWT">Create JWT</a> endpoint.</b></td>
+        <td>Token used for JWT authentication, tokens can be generated using the <a href="/docs/client/account#accountCreateJWT">Create JWT</a> endpoint.</b></td>
     </tr>
     <tr>
         <td><code>X-Appwrite-Response-Format: [VERSION-NUMBER]</code></td>
@@ -54,7 +54,7 @@
 </div>
 
 <h2><a href="/docs/rest#client-auth" id="client-auth">Client Authentication</a></h2>
-<p>You can create account sessions with POST requests to the <a href="docs/client/account">Account API</a>. Sessions are persisted using secured cookies. You can learn more about session persistence in the <a href="/docs/authentication#persistence">Authentication Guide</a>.</p>
+<p>You can create account sessions with POST requests to the <a href="/docs/client/account">Account API</a>. Sessions are persisted using secured cookies. You can learn more about session persistence in the <a href="/docs/authentication#persistence">Authentication Guide</a>.</p>
 <p>The example below shows creating an account session with the <a href="/docs/client/account#accountCreateEmailSession">Create Account Session with Email</a> endpoint.</p>
 <div class="ide margin-bottom" data-lang="http" data-lang-label="HTTP">
     <pre class="line-numbers"><code class="prism language-http" data-prism>POST /v1/account/sessions/email HTTP/1.1
@@ -93,7 +93,7 @@ X-Appwrite-Key: [API_KEY]</code></pre>
 </div>
 
 <h2><a href="/docs/rest#server-auth" id="server-auth">JWT Authentication</a></h2>
-<p>JWT authentication is frequently used by server applications to act on behalf of a user. Users generate tokens using the <a href="docs/client/account#accountCreateJWT">Create JWT</a> endpoint. When issuing requests authenticated with a JWT, Appwrite will treat the request like it is from the authenticated user.</p>
+<p>JWT authentication is frequently used by server applications to act on behalf of a user. Users generate tokens using the <a href="/docs/client/account#accountCreateJWT">Create JWT</a> endpoint. When issuing requests authenticated with a JWT, Appwrite will treat the request like it is from the authenticated user.</p>
 
 <div class="ide margin-bottom" data-lang="http" data-lang-label="HTTP">
     <pre class="line-numbers"><code class="prism language-http" data-prism>GET /v1/account HTTP/1.1
